Fix: casino skeleton with wrong dimensios

--- a/src/app/shared/layout/skeleton/types/skeleton-casino/skeleton-casino.component.css
+++ b/src/app/shared/layout/skeleton/types/skeleton-casino/skeleton-casino.component.css
@@ -1,7 +1,7 @@
 .loading-listagem .slider {
     display: flex;
     flex-direction: column;
-    margin: 0;
+    margin: 22px 0 0 0;
 }
 
 .loading-listagem .slider .title {
@@ -11,12 +11,12 @@
     margin: 10px 0;
 }
 
-.loading-listagem .slider .title .left {
-    height: 27px;
-    width: 200px;
+.loading-listagem .slider > .title .left {
+    height: 32px;
+    width: 304px;
 }
 
-.loading-listagem .slider .title .right {
+.loading-listagem .slider > .title .right {
     height: 27px;
     width: 70px;
 }
@@ -24,29 +24,52 @@
 .loading-listagem .slider .itens {
     display: flex;
     overflow: hidden;
-    gap: 20px;
+    gap: 15px;
 }
 
-.loading-listagem .slider .itens div {
-    min-width: 216px;
-    height: 155px;
+.square-container {
+    min-width: 182px;
+    height: auto;
     border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+}
+
+.square-container .ssc-square.content{
+    border-radius: 5px;
+    height: 182px;
+}
+
+.square-container .title {
+    gap: 8px;
+    display: flex;
+    margin: 12px 0;
+    padding-left: 4px;
+    flex-direction: column;
+}
+
+.square-container .title-square,
+.square-container .sub-title-square {
+    height: 10px;
+    border-radius: 3px;
+}
+
+.title-square {
+    width: 172px;
+}
+
+.sub-title-square {
+    width: 58px;
 }
 
 @media only screen and (max-width: 1024px) {
     .loading-listagem .slider .itens {
         gap: 10px;
     }
-    
-    .loading-listagem .slider .itens div {
-        min-width: 200px;
-        height: 144px;
-        border-radius: 5px;
-    }
 
     .loading-listagem .slider .title .left {
         height: 27px;
-        width: 130px;
+        width: 304px;
     }
     
     .loading-listagem .slider .title .right {
@@ -55,10 +78,21 @@
     }
 }
 
-@media only screen and (max-width: 400px) {
-    .loading-listagem .slider .itens div {
-        min-width: 140px;
-        height: 100px;
+@media only screen and (max-width: 500px) {
+    .square-container {
+        min-width: 112px;
+    }
+
+    .loading-listagem .slider .title .left {
+        width: 140px;
+    }
+    
+    .square-container .ssc-square.content{
         border-radius: 5px;
+        height: 112px;
+    }
+
+    .title-square {
+        width: 104px;
     }
 }
