--- a/src/app/shared/layout/skeleton/types/skeleton-casino/skeleton-casino.component.html
+++ b/src/app/shared/layout/skeleton/types/skeleton-casino/skeleton-casino.component.html
@@ -5,18 +5,76 @@
             <div class="ssc-square right"></div>
         </div>
         <div class="itens">
-            <div class="ssc-square content"></div>
-            <div class="ssc-square content"></div>
-            <div class="ssc-square content"></div>
-            <div class="ssc-square content"></div>
-            <div class="ssc-square content"></div>
-            <div class="ssc-square content"></div>
-            <div class="ssc-square content"></div>
-            <div class="ssc-square content"></div>
-            <div class="ssc-square content"></div>
-            <div class="ssc-square content"></div>
-            <div class="ssc-square content"></div>
-            <div class="ssc-square content"></div>
+            <div class="square-container">
+                <div class="ssc-square content"></div>
+                <div class="title">
+                    <div class="ssc-square title-square"></div>
+                    <div class="ssc-square sub-title-square"></div>
+                </div>
+            </div>
+            <div class="square-container">
+                <div class="ssc-square content"></div>
+                <div class="title">
+                    <div class="ssc-square title-square"></div>
+                    <div class="ssc-square sub-title-square"></div>
+                </div>
+            </div>
+            <div class="square-container">
+                <div class="ssc-square content"></div>
+                <div class="title">
+                    <div class="ssc-square title-square"></div>
+                    <div class="ssc-square sub-title-square"></div>
+                </div>
+            </div>
+            <div class="square-container">
+                <div class="ssc-square content"></div>
+                <div class="title">
+                    <div class="ssc-square title-square"></div>
+                    <div class="ssc-square sub-title-square"></div>
+                </div>
+            </div>
+            <div class="square-container">
+                <div class="ssc-square content"></div>
+                <div class="title">
+                    <div class="ssc-square title-square"></div>
+                    <div class="ssc-square sub-title-square"></div>
+                </div>
+            </div>
+            <div class="square-container">
+                <div class="ssc-square content"></div>
+                <div class="title">
+                    <div class="ssc-square title-square"></div>
+                    <div class="ssc-square sub-title-square"></div>
+                </div>
+            </div>
+            <div class="square-container">
+                <div class="ssc-square content"></div>
+                <div class="title">
+                    <div class="ssc-square title-square"></div>
+                    <div class="ssc-square sub-title-square"></div>
+                </div>
+            </div>
+            <div class="square-container">
+                <div class="ssc-square content"></div>
+                <div class="title">
+                    <div class="ssc-square title-square"></div>
+                    <div class="ssc-square sub-title-square"></div>
+                </div>
+            </div>
+            <div class="square-container">
+                <div class="ssc-square content"></div>
+                <div class="title">
+                    <div class="ssc-square title-square"></div>
+                    <div class="ssc-square sub-title-square"></div>
+                </div>
+            </div>
+            <div class="square-container">
+                <div class="ssc-square content"></div>
+                <div class="title">
+                    <div class="ssc-square title-square"></div>
+                    <div class="ssc-square sub-title-square"></div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
