feat: adjust modal message and condition percentage

--- a/src/app/shared/layout/modals/configuracao-limite-perdas-modal/configuracao-limite-perdas-modal.component.html
+++ b/src/app/shared/layout/modals/configuracao-limite-perdas-modal/configuracao-limite-perdas-modal.component.html
@@ -6,12 +6,11 @@
             </div>
             <div class="modal-body-custom">
                 <ng-container>
-                    <p>Para abrir o jogo, basta clicar em "Continuar", mas saiba que, ao fazer isso, você não será possível realizar apostas até o próximo ciclo de perdas.</p>
+                    <p>Você atingiu o limite de perdas permitido. Por favor, aguarde o início do próximo ciclo para voltar a realizar suas apostas.</p>
                 </ng-container>
             </div>
             <div class="modal-footer-he">
-                <button type="button" class="btn btn-custom btn-block btn-cadastrar" (click)="back()">Continuar</button>
-                <button type="button" class="btn btn-secondary btn-cancel" (click)="backHome()">Voltar para tela inicial</button>
+                <button type="button" class="btn btn-custom btn-block btn-cadastrar" (click)="back()">Fechar</button>
             </div>
         </div>
     </div>
