--- a/src/app/shared/layout/modals/configuracao-limite-perdas-porcentagem-modal/configuracao-limite-perdas-porcentagem-modal.component.html
+++ b/src/app/shared/layout/modals/configuracao-limite-perdas-porcentagem-modal/configuracao-limite-perdas-porcentagem-modal.component.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header-he">
-                <h3 class="modal-title"></h3>
+                <h3 class="modal-title">Limite de Perdas</h3>
             </div>
             <div class="modal-body-custom">
                 <ng-container>
