add delete bank account

--- a/src/app/shared/layout/list-bank-accounts/list-bank-accounts.component.html
+++ b/src/app/shared/layout/list-bank-accounts/list-bank-accounts.component.html
@@ -21,7 +21,7 @@
                                 <span class="account__bank-name"> {{ accountItem.nomeBanco }} </span>
                             </div>
                             <div class="">
-                                <a href="javascript:void(0)" (click)="openConfirmModal(accountItem)"><i _ngcontent-iqi-c76="" class="fa fa-trash" style="text-decoration: none; color: var(--foreground-sidebars);"></i></a>
+                                <a href="javascript:void(0)" (click)="openConfirmModal(accountItem)"><i class="fa fa-trash" style="text-decoration: none; color: var(--foreground-sidebars);"></i></a>
                             </div>
                         </div>
                         <span class="account__bank-agency">Agência: {{ accountItem.numeroAgencia }}</span>
