--- a/src/app/shared/layout/skeleton/types/skeleton-casino-filter-bar/skeleton-casino-filter-bar.component.css
+++ b/src/app/shared/layout/skeleton/types/skeleton-casino-filter-bar/skeleton-casino-filter-bar.component.css
@@ -1,8 +1,10 @@
 .loading-listagem .slider {
     display: flex;
     flex-direction: column;
-    gap: 45px;
+    gap: 30px;
     margin: 0;
+    padding-right: 12px;
+    margin-top: 18px;
 }
 
 .loading-listagem .slider .search-bar {
