--- a/src/app/shared/layout/skeleton/skeleton.component.html
+++ b/src/app/shared/layout/skeleton/skeleton.component.html
@@ -3,3 +3,4 @@
 <app-skeleton-casino-filter-bar *ngIf="showSkeletonCasinoFilterBar"/>
 <app-skeleton-banner *ngIf="showSkeletonBanner"/>
 <app-skeleton-small-banner *ngIf="showSkeletonSmallBanner"/>
+<app-skeleton-game-casino *ngIf="showSkeletonGameCasino"/>
