--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -241,6 +241,10 @@ iframe{
     padding-right: 8px;
 }
 
+.skeleton-container {
+    margin: 20px 30px;
+}
+
 #expanded-btn-game-opened, #expanded-btn-game-closed, #close-btn-game {
     display: flex;
 }
@@ -248,6 +252,9 @@ iframe{
 @media only screen and (max-width: 1024px) {
     .game-view {
         z-index: 10000;
+    }
+    .skeleton-container {
+        margin: 20px 15px;
     }
 }
 
