--- a/src/app/casino/wall/components/wall-game-card/wall-game-card.component.scss
+++ b/src/app/casino/wall/components/wall-game-card/wall-game-card.component.scss
@@ -237,6 +237,13 @@
     }
 }
 
+@media only screen and (max-width: 1024px) {
+    .game-card__image{
+        min-width: 100%;
+        min-height: auto;
+    }
+}
+
 @media only screen and (min-width: 1920px){
     .game-card--inline{
         width: 170px;
