--- a/src/app/shared/layout/skeleton/types/skeleton-casino/skeleton-casino.component.css
+++ b/src/app/shared/layout/skeleton/types/skeleton-casino/skeleton-casino.component.css
@@ -76,6 +76,24 @@
         height: 27px;
         width: 50px;
     }
+
+    .square-container {
+        min-width: 165px;
+    }
+    
+    .square-container .ssc-square.content {
+        height: 165px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .square-container {
+        min-width: 140px;
+    }
+
+    .square-container .ssc-square.content {
+        height: 140px;
+    }
 }
 
 @media only screen and (max-width: 500px) {
