feature: adding new link on footer for puskasbet.com.br

--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -114,6 +114,9 @@
             <a [routerLink]="['/informacoes/termos-condicoes']" *ngIf="hasTermosCondicoes">
                 {{'footer.termosECondicoes' | translate}}
             </a>
+            <a *ngIf="this.slug == 'puskasbet.com.br'" href="https://ouvidoria.puskasbet.com.br" target="_blank">
+                {{'footer.feedback' | translate}}
+            </a>
         </div>
 
         <div class="links" *ngIf="cartaoApostaHabilitado">
