feature: onboarding-modal

--- a/src/app/shared/layout/modals/onboarding-modal/onboarding-modal.component.html
+++ b/src/app/shared/layout/modals/onboarding-modal/onboarding-modal.component.html
@@ -1,1 +1,21 @@
-<p>onboarding-modal works!</p>
+<div>
+    <div class="modal-header2">
+        <div>
+            <a type="button" class="btn-close" aria-label="Close">
+                <i class="fa fa-times"></i>
+            </a>
+        </div>
+    </div>
+    <div class="modal-body">
+        <div>
+            <p class="title"><b> Cadastre-se e descubra um mundo de entretenimento!</b></p>
+            <p class="text">Crie sua conta e tenha acesso a uma experiência completa com apostas e jogos emocionantes, tudo em um só lugar!</p>
+        </div>
+        <div class="body-button">
+            <div><button class="button-register button-text">Registrar-se com o e-mail</button></div>
+            <div class="body-text"><span>Ou</span></div>
+            <div><button class="button-register button-text">Registrar com o google</button></div>
+        </div>
+    </div>
+</div>
+
