--- a/src/app/shared/layout/back-page/back-page/back-page.component.html
+++ b/src/app/shared/layout/back-page/back-page/back-page.component.html
@@ -1,7 +1,12 @@
 <div class="back-page">
     <div *ngIf="showBtn" class="back-page__button">
         <button (click)="back()">
-            <img src="https://weebet.s3.amazonaws.com/cdn/img/icons/iconamoon_arrow-left-2.svg" alt="">
+            <svg class="icon-arrow-left" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g id="iconamoon:arrow-left-2">
+                    <rect width="26" height="26" rx="4"/>
+                    <path id="Vector" d="M15.0625 8.87494L10.9374 13L15.0625 17.1251" stroke-opacity="0.5" stroke-width="1.52311" stroke-linecap="round" stroke-linejoin="round"/>
+                </g>
+            </svg>
         </button>
     </div>
 
