--- a/src/app/shared/layout/back-page/back-page/back-page.component.css
+++ b/src/app/shared/layout/back-page/back-page/back-page.component.css
@@ -17,13 +17,21 @@
     padding-bottom: 2px;
 }
 
+.icon-arrow-left g rect {
+    fill: var(--game);
+}
+
+.icon-arrow-left g path {
+    stroke: var(--foreground-game);
+}
+
 .back-page__text {
     width: 100%;
     height: 100%;
 }
 
 .back-page__text h4 {
-    color: #FFFFFF;
+    color: var(--foreground);
     font-size: 16px;
     font-weight: 600;
     margin: 0;
