Feat: Added DocCheck in other places

--- a/src/app/auth/resetar-senha/resetar-senha.component.html
+++ b/src/app/auth/resetar-senha/resetar-senha.component.html
@@ -121,7 +121,7 @@
                     </div>
 
                 <div *ngIf="faceMatchType == 'docCheck' && faceMatchEnabled">
-                    <div #docCheck id="legitimuz"
+                    <div #docCheck id="docCheck"
                             *ngIf="!faceMatchChangePasswordValidated">
                         <div id="verify-identity-text">
                             {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) :
