--- a/src/app/auth/resetar-senha/resetar-senha.component.css
+++ b/src/app/auth/resetar-senha/resetar-senha.component.css
@@ -84,18 +84,18 @@ form .buttons {
 
 }
 
-#legitimuz-container {
+#legitimuz-container, #docCheck {
     background-color: var(--sidebars);
     padding: 30px 20px;
 }
 
-#legitimuz {
+#legitimuz, #docCheck {
     display: flex;
     flex-direction: column;
     gap: 16px;
 }
 
-#legitimuz-action-faceindex, #legitimuz-action-verify {
+#legitimuz-action-faceindex, #legitimuz-action-verify, #exDocCheckAction {
     flex: 1;
     width: 25%;
 }
